Click image to show overlay

--- a/packages/extension/src/components/main/styles.scss
+++ b/packages/extension/src/components/main/styles.scss
@@ -1,6 +1,6 @@
-.container {
+.box {
   padding: 20px;
-  border: 1px solid #e0e0e0;
+  // border: 1px solid #e0e0e0;
   margin-bottom: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0 5px 20px 0;
   border-radius: 4px;
